# MultiThreadLogger

./: CMakeLists.txt  README.md  main.cpp
src/: Logger.cpp  Logger.hpp
